--- a/image.css
+++ b/image.css
@@ -1,6 +1,7 @@
 body {
   background-color: #6495ED
 }
+/*inspired by “No.” Is My Computer on Fire?, www.ismycomputeronfire.com/.*/
 
 .text {
   top: 200px;
